--- a/weekly-report/04-14-23-report.md
+++ b/weekly-report/04-14-23-report.md
@@ -1,4 +1,16 @@
 ### Weekly Report 1
 #### 04/14/2023
 
+Progress:
+- Uploaded data
+- Each of our members created our own branches
+- Started initial investigation into the MCMF data in Python
+- Created weekly-report folder in our GitHub repository
 
+Problem:
+- MCMF Problem seems to be a large, vague project
+
+Plan:
+- Conduct further investigation into the MCMF data
+- Review notes from My Chi My Future Presentation
+- Gain clarification on goals for the My Chi My Future Project
