--- a/weekly-report/04-14-23-report.md
+++ b/weekly-report/04-14-23-report.md
@@ -2,7 +2,7 @@
 #### 04/14/2023
 
 Progress:
-- Uploaded data
+- Uploaded data (convert_MCMF_ALL_TIME_DATA.csv)
 - Each of our members created our own branches
 - Started initial investigation into the MCMF data in Python
 - Created weekly-report folder in our GitHub repository
@@ -11,6 +11,6 @@ Problem:
 - MCMF Problem seems to be a large, vague project
 
 Plan:
-- Conduct further investigation into the MCMF data
+- Conduct EDA into the MCMF data
 - Review notes from My Chi My Future Presentation
 - Gain clarification on goals for the My Chi My Future Project
