--- a/weekly-report/04-14-23-report.md
+++ b/weekly-report/04-14-23-report.md
@@ -6,7 +6,7 @@ Progress:
 - Each of our members created our own branches
 - Started initial investigation into the MCMF data in Python
 - Created weekly-report folder in our GitHub repository
-- Decided on weekly meeting time and location: 
+- Decided on weekly meeting time: Wednesdays 3:15PM - 4:15PM
 
 Problem:
 - MCMF Problem seems to be a large, vague project
