--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -409,6 +409,34 @@
    "source": [
     "data['Geographic Cluster Name'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0b3fbb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Latitude'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1424db6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d758b2eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
