--- a/weekly-report/04-21-23-report.md
+++ b/weekly-report/04-21-23-report.md
@@ -14,6 +14,14 @@ Problem:
 
 
 Plan:
+- EDA: category_name, capacity, min_age, max_age, meeting_type, start_date, end_date, program_price, geogrpahic_cluster_name, program_pays_participants, program_has_scholarships, program_provides_transportation, latitude, longitude, program_provides_free_food
+  -   capacity, min_age, max_age
+  -   start_date, end_date
+  -   program_price, program_pays_participants, program_has_scholarships
+  -   program_provides_transportation, latitude, longitude
+- Cathy: Map comparisons
+- Ada: Maybe figure out longitude latitude things
 
+- Far off idea: EDA of description
 
 
