--- a/weekly-report/04-21-23-report.md
+++ b/weekly-report/04-21-23-report.md
@@ -11,7 +11,7 @@ Our team met on Wednesday (04/19) to discuss plans for the my_chi data and compa
 On Friday (04/21), we merged the data cleaning and EDA we have done. 
 
 Problem:
-
+- Doing EDA with so many null values
 
 Plan:
 - EDA: category_name, capacity, min_age, max_age, meeting_type, start_date, end_date, program_price, geogrpahic_cluster_name, program_pays_participants, program_has_scholarships, program_provides_transportation, latitude, longitude, program_provides_free_food
