Update the weekly report

--- a/weekly-report/04-21-23-report.md
+++ b/weekly-report/04-21-23-report.md
@@ -8,7 +8,7 @@ Our team met on Wednesday (04/19) to discuss plans for the my_chi data and compa
 - Visualizing which neighborhoods have seen the greatest rise and improvement in programs since the program's inception in 2020
 - Within the 15 focus areas, identify recommendations for each one
 
-On Friday (04/21), we merged the data cleaning and EDA we have done. 
+On Friday (04/21), we merged the data cleaning and done EDA. 
 
 Problem:
 - Doing EDA with so many null values
@@ -21,6 +21,7 @@ Plan:
   -   program_provides_transportation, latitude, longitude
 - Cathy: Map comparisons
 - Ada: Maybe figure out longitude latitude things
+- Matt: look into category name, start/end date
 
 - Far off idea: EDA of description
 
