--- a/weekly-report/04-21-23-report.md
+++ b/weekly-report/04-21-23-report.md
@@ -24,7 +24,7 @@ Plan:
 - Cathy: Map comparisons
 - Ada: Maybe figure out longitude latitude things
 - Matt: look into category name, start/end date
-- Angelina: look into capacity, min_age, max_age, program_price, program_pays_participants, program_has_scholarships
+- Angelina: look into capacity, min_age, max_age, program_price, program_pays_participants, program_has_scholarships, program_provides_free_food
 - We will focus on MCMF this week and Kaggle next week
 
 - Far off idea: EDA of description
