Uploaded cleaned data

--- a/Bus Stops Data.ipynb
+++ b/Bus Stops Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "978195df",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7b0ffd8a",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "4          Archer & Damen  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fe6a328f",
    "metadata": {},
    "outputs": [
@@ -170,9 +170,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tx/ccgvwwd562sfhw5ybj094vxc0000gn/T/ipykernel_62675/1377400399.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/tx/ccgvwwd562sfhw5ybj094vxc0000gn/T/ipykernel_10735/1377400399.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  bus['latitude'] = bus['the_geom'].str.split(' ').str[1].str.replace('(', '').astype(float)\n",
-      "/var/folders/tx/ccgvwwd562sfhw5ybj094vxc0000gn/T/ipykernel_62675/1377400399.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/tx/ccgvwwd562sfhw5ybj094vxc0000gn/T/ipykernel_10735/1377400399.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  bus['longitude'] = bus['the_geom'].str.split(' ').str[2].str.replace(')', '').astype(float)\n"
      ]
     },
@@ -314,7 +314,7 @@
        "4          Archer & Damen -87.675179  41.832014  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c1e51c28",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "4  CHICAGO          Archer & Damen  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,6 +481,24 @@
     "bus = bus.reindex(columns=['latitude', 'longitude'] + list(bus.columns[:-2]))\n",
     "bus.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f6efb1d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bus.to_csv('CTA_BusStops_Cleaned.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "884651c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
