--- a/weekly-report/04-28-23-report.md
+++ b/weekly-report/04-28-23-report.md
@@ -3,19 +3,20 @@
 
 
 Progress:
-- We completed most of the data cleaning and the majority of the EDA and pushed our changes on GitHub.
+- We completed most of the data cleaning and the majority of the EDA and pushed our changes on GitHub. (NA values, Dataset limitations, Distribution of variables, Online vs. IRL, Program provide scholarship)
+- We incorporated external datasets (bus stops, life expectancy, median income, safety rates, etc) to further our EDA analysis.
 - Our team created a google slides template in preparation for the MCMF EDA presentation on Friday, May 5th.
 - We split up tasks for the presentation.
 - For Kaggle, we conducted initial data cleaning on the dataset.
+- We created comparison maps of Chicago using RStudio to compare the priority neighborhoods with factors such as income, life expectancy, safety rates, etc.
 
 Problem:
-- We are still figuring out the best way to incorporate the transportation (bus stops) data. 
+- We are still figuring out the best way to incorporate the transportation (bus stops) data.
 - Making sure our EDA presentation is comprehensive and ~9 minutes
 
 Plan:
 - We had primarily focused on the MCMF data the past two weeks, so we will be focusing more on the Kaggle dataset this week.
 - Our team will individually be working on our assigned section for the presentation.
 - We will meet on Wednesday, May 3rd to review our presentation slide and rehearse. 
-- 
 
 
