--- a/weekly-report/04-28-23-report.md
+++ b/weekly-report/04-28-23-report.md
@@ -13,6 +13,7 @@ Progress:
 Problem:
 - We are still figuring out the best way to incorporate the transportation (bus stops) data.
 - Making sure our EDA presentation is comprehensive and ~9 minutes
+- Balancing time between MCMF and Kaggle datasets
 
 Plan:
 - We had primarily focused on the MCMF data the past two weeks, so we will be focusing more on the Kaggle dataset this week.
