Update Bus Stop Distance Calculations.ipynb

--- a/MCMF/Bus Stop Distance Calculations.ipynb
+++ b/MCMF/Bus Stop Distance Calculations.ipynb
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b3c00f25",
+   "id": "a497dcf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e61e1c2",
+   "id": "b17157e4",
    "metadata": {},
    "source": [
     "#### Train"
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d191889a",
+   "id": "09cd6c57",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "37a83f57",
+   "id": "08127d92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "10cb1190",
+   "id": "a8ecce43",
    "metadata": {
     "scrolled": true
    },
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "ce3b434f",
+   "id": "2885f91b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "76ab4d60",
+   "id": "5675b73d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e4fdd021",
+   "id": "af398da6",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7f27d8e7",
+   "id": "752207d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "2e9ad11f",
+   "id": "6825dae0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "fe86306f",
+   "id": "82d0ab29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "657bcb71",
+   "id": "c01e9e57",
    "metadata": {
     "scrolled": true
    },
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "91be1877",
+   "id": "6fbc5527",
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "c0f169f3",
+   "id": "30c492bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d1e458c1",
+   "id": "07bfc09f",
    "metadata": {
     "scrolled": true
    },
@@ -1222,11 +1222,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b68648e4",
+   "execution_count": 51,
+   "id": "6edda3f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mcmf.to_csv('mcmf.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
