data cleaning for shiny

--- a/MCMF/Data cleaning for shiny.ipynb
+++ b/MCMF/Data cleaning for shiny.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "caafc9bb",
+   "metadata": {},
+   "source": [
+    "# Data cleaning code\n",
+    "This is the code to clean the MCMF data used in the shiny app. Note: here it doesn't filter for face-to-face programs, but haversine_distances may require that none of the longitude/latitude values are NaN based on your Python version. As such, you may have to filter for face-to-face programs first before cleaning."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e7059c19",
@@ -16,7 +25,7 @@
     "import re\n",
     "from skimpy import clean_columns\n",
     "from math import radians\n",
-    "from sklearn.metrics.pairwise import haversine_distances\n"
+    "from sklearn.metrics.pairwise import haversine_distances"
    ]
   },
   {
